2005-08-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_validate): Replace solid numbers with defined
	values
	(convert_to_12h): Remove "work-around" for the broken 12h timespec


2005-08-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-color-selector.c (modify_selected): fix
	invalid cast from `GdkWindow' to `GtkWindow' 

	* hildon-widgets/hildon-color-popup.c
	(hildon_popup_palette_expose): removed debug printing

2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/tmpl/hildon-note.sgml: code example, use slightly less funny
	string examples.

	* hildon-widgets/hildon-scroll-area.c
	(hildon_scroll_area_destroy): one-instruction function:
	removed. Call g_free directly.
	+ minor cleanup
	(hildon_scroll_area_size_allocate):When a scrollbar appears to the
	right edge of window, size of the child is also shrinked. 'fixed'
	does not automatically update this data -> Doing it manually.

	* hildon-widgets/hildon-date-editor.h: added
	HildonDateEditorErrorType error enumeration type, removed signal
	"validate-date" virtual function, added signal "date-error"
	virtual function.

	* hildon-widgets/hildon-date-editor.c (hildon_date_editor_date_error):
	added custom info prints.
	(hildon_date_editor_validate_date): removed
	(hildon_date_editor_entry_validate): validate maximum and minimum
	limits on each field.
	(hildon_date_editor_entry_focus_out): check the date validation
	in simpler manner, don't put content if field is empty (spec
	doesn't say if there should be anything placed in the entry if
	it is empty).
	(hildon_date_editor_get_date),
	(hildon_date_editor_get_month),
	(hildon_date_editor_get_year),
	(hildon_date_editor_get_day): use direct entry content, so that 0
	indicates empty entry, and information is more accurate.

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: Adjusted CFLAGS and removed -Werror due to the
	glib-2.0 flaw. See